--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -20,6 +20,14 @@
 <!--        <maven.compiler.target>15</maven.compiler.target>-->
 <!--    </properties>-->
     <dependencies>
+
+        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.36.0.3</version>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -100,28 +108,6 @@
                     <target>15</target>
                 </configuration>
             </plugin>
-            <!--            <plugin>-->
-            <!--                <groupId>org.openjfx</groupId>-->
-            <!--                <artifactId>javafx-maven-plugin</artifactId>-->
-            <!--                <version>0.0.8</version>-->
-            <!--                <configuration>-->
-            <!--                    <mainClass>com.geekbrains.client.App</mainClass>-->
-            <!--                </configuration>-->
-            <!--            </plugin>-->
-            <!--            <plugin>-->
-            <!--                <groupId>org.springframework.boot</groupId>-->
-            <!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
-            <!--                <executions>-->
-            <!--                    <execution>-->
-            <!--                        <goals>-->
-            <!--                            <goal>repackage</goal>-->
-            <!--                        </goals>-->
-            <!--                        <configuration>-->
-            <!--                            <mainClass>com.geekbrains.client.Launcher</mainClass>-->
-            <!--                        </configuration>-->
-            <!--                    </execution>-->
-            <!--                </executions>-->
-            <!--            </plugin>-->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
@@ -165,7 +151,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>com.geekbrains.client.Launcher</mainClass>
+                            <mainClass>com.geekbrains.client.App</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -185,7 +171,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.geekbrains.client.Launcher</mainClass>
+                            <mainClass>com.geekbrains.client.App</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
